[metadata]
name = sorts
description = Radar simulator in C and Python
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
author = Daniel Kastinen, Juha Vierinen, Thomas Maynadie, Tom Grydeland
author_email = daniel.kastinen@irf.se
license = MIT
license_files = LICENSE
readme = README.rst
url = https://github.com/danielk333/sorts
classifiers = 
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT
    Intended Audience :: Science/Research
    Operating System :: Unix


[options]
python_requires = >= 3.7
install_requires =
    git+https://github.com/danielk333/pyant.git@0.5.0
    git+https://github.com/danielk333/pyorb.git@0.3.2
    h5py>=3.2.1
    matplotlib>=2.2.2
    numpy>=1.14.3
    scipy>=1.1.0
    sgp4>=2.7
    tabulate>=0.8.7
    tqdm>=4.46.0
    astropy>=4.1
    xmlschema>=1.5.1

[options.extras_require]
develop = 
    pytest >= 6.2.5
    sphinx >= 4.2.0
    flake8 >= 4.0.1
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2
    coverage >= 6.0.2
    sphinx-gallery >= 0.3.1
    matplotlib >= 3.5.1
    nbsphinx >= 0.8.8
    ipykernel >= 6.9.1
    radon >= 5.1.0
    m2r2 >= 0.3.2
    setuptools >= 57.4.0
    numpydoc >= 1.2
    sphinx_panels
mpi =
    mpi4py >= 3.1.1


[flake8]
ignore = D203,E251,E126,E226,W291
max-line-length = 110
exclude = src/sorts/__pycache__,src/sorts/__init__.py,src/sorts/**/__init__.py