[metadata]
name = sorts
description = Space Object Radar Tracking Simulator
long_description = file: README.rst, LICENSE
long_description_content_type = text/reStructuredText
author = Daniel Kastinen, Juha Vierinen, Tom Grydeland
author_email = daniel.kastinen@irf.se
license = MIT
license_files = LICENSE
readme = README.rst
homepage = https://github.com/danielk333/SORTS
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: Unix
    License :: OSI Approved :: MIT License


[options.entry_points]
console_scripts =
    sorts = sorts.cli:main


[options]
packages = find:
python_requires = >=3.7
install_requires =
    h5py >= 3.2.1
    matplotlib >= 2.2.2
    numpy >= 1.14.3
    scipy >= 1.1.0
    sgp4 >= 2.7
    tabulate >= 0.8.7
    tqdm >= 4.46.0
    astropy >= 4.1
    xmlschema >= 1.5.1
    pyorb >= 0.5.4
    pyant >= 0.11.0
    yappi >= 1.4.0
    requests


[options.extras_require]
develop =
    pytest >= 6.2.5
    sphinx >= 4.2.0
    flake8 >= 4.0.1
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2
    pytest-cov >= 4.1.0
    sphinx-gallery >= 0.3.1
    matplotlib >= 3.5.1
    nbsphinx >= 0.8.8
    ipykernel >= 6.9.1
    radon >= 5.1.0
    numpydoc >= 1.2
    pre-commit > 3.0.0
    black >= 23.3.0
    auditwheel >= 5.4.0
    patchelf >= 0.14
    sphinx_panels >= 0.6.0
    hawkmoth >= 0.16.0
    # sphinx.ext.pngmath
    # sphinx.ext.todo
spacetrack =
    spacetrack >= 1.0.1


[flake8]
ignore = D203,E251,E126,E226,W504,W503,W605,E231,E203
max-line-length = 100
exclude = src/**/__pycache__,src/**/__init__.py


[radon]
exclude = test_*.py
cc_min = B
